# groundwork

./: .gitignore  FINDINGS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
eval/: PROTOCOL.md  README.md  REPORT.md  analyze_session.py  checks.py  compare.py  grade.py  judge.py  latest_session.py  pilot.py  pricing.json  selftest.py  transcript.py
eval/prompts/: bigmap.txt  bigsearch.txt  bisectorbig.txt  cartographer.txt  codemod.txt  codemodbig.txt  covdiffbig.txt  datalens.txt  datalensbig.txt  depsurfacebig.txt  doc2mdbig.txt  gatesbig.txt  gitwhybig.txt  hellobig.txt  imgmeasurebig.txt  ledgerbig.txt  mutcheckbig.txt  ocrbig.txt  patchgatebig.txt  propcheckbig.txt  recordstorebig.txt  scratchdbbig.txt  semsearch.txt  skillgenbig.txt  snipevalbig.txt  verify.txt  verifybig.txt  visdiffbig.txt
eval/runs/: bigmap__with__r1.json  bigmap__without__r1.json  bigsearch__with__r1.json  bigsearch__without__r1.json  bisectorbig__with__r1.json  bisectorbig__without__r1.json  codemodbig__with__r1.json  codemodbig__without__r1.json  covdiffbig__with__r1.json  covdiffbig__without__r1.json  datalensbig__with__r1.json  datalensbig__without__r1.json  depsurfacebig__with__r1.json  depsurfacebig__without__r1.json  doc2mdbig__with__r1.json  doc2mdbig__without__r1.json  gatesbig__with__r1.json  gatesbig__without__r1.json  gitwhybig__with__r1.json  (+27 more)
hooks/: hooks.json
tests/: test_cache_cmd.py  test_dispatcher.py  test_doctor.py  test_new_tool.py  test_runner_ledger.py  test_skillgen.py  test_smoke.py
(+377 files in other folders)
